2007-01-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkassistant.c: Add Gtk::Assistant#set_current_page. 

2007-01-06  Juergen Mangler  <juergen.mangler@univie.ac.at>

	* sample/misc/alpha-demo.rb: added.
	Original:
	- http://plan99.net/~mike/blog/2006/06/05/alpha-blended-windows-in-python/
	- http://david.navi.cx/blog/?p=91

2007-01-02  Dirk von Schmieden

	* src/rbgdkdragcontext.c: Fix type conversions. Bug #1625880.

2006-12-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtk.c: Fixed an warning to initialize Gtk::Window.
	reported by Tilman Sauerbeck.

2006-12-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkfilechooserdialog.c, src/rbgdkevent.c: 
	Fix compiling warning.

2006-12-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Work MinGW again.
	* src/rbgtkpagesetupunixdialog.c, rbgtkprinter.c, rbgtkprintjob.c
	rbgtkprintunixdialog.c: Fixed a compiling error on MinGW.

2006-12-26  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtktextiter.c (get_pixbuf): fixed a typo. Bug #1620759.

2006-12-22  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkdraw.c (gdkdraw_set_colormap): fixed a typo. Bug #1620156.

2006-12-17  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkcairo.c (gdkdraw_cairo_set_source_pixbuf):
	- made x and y are optional.
	- moved to Ruby/GdkPixbuf2.

2006-12-05  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtktreeview.c (Init_gtk_treeview): added
	GTK_CHECK_VERSION(2,10,0) for GtkTreeViewGridLines.

2006-11-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkrecentchoosermenu.c: Added Gtk::RecentChooserMenu for GTK+-2.10. 

2006-11-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkwindow.c: Added Gdk::Window#input_shape_combine_(mask|region), 
	#set_child_input_shapes, #merge_child_input_shapes, #type_hint for GTK+-2.10.

2006-11-25  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgdkscreen.c: Added Gdk::Screen#font_options, #set_font_options, #active_window,
	#window_stack, composited?